css updated with google font

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saiful's Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- google font link here -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+<!-- css style sheet here -->
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Welcome To</h1>
+    <h1>Saiful's Web World</h1>
 </body>
 </html>
