button added with css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,32 @@
     <title>Saiful's Portfolio</title>
     <!-- google font link here -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
-<!-- css style sheet here -->
-<link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+    <!-- css style sheet here -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1>Saiful's Web World</h1>
+    <section>
+        <div class="top-banner">
+            <h1>Welcome To</h1>
+            <h1><span class="top-orange">Saiful Haque's</span> Web World</h1>
+
+            <h3>Build Climber and Train Stopper</h3>
+            <p>
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.
+            </p>
+            <a class="hire-button" href="https://github.com/saifulhaque015/dev-port" target="_blank">Hire Me</a>
+        </div>
+        <div class="top-banner">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
