top corner background added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-corner">
         <div class="top-banner">
             <h1>Welcome To</h1>
             <h1><span class="top-orange">Saiful Haque's</span> Web World</h1>
