--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-corner">
+    <section class="top-corner flexible-container">
         <div class="top-banner">
             <h1>Welcome To</h1>
             <h1><span class="top-orange">Saiful Haque's</span> Web World</h1>
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="top-banner">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -49,6 +49,38 @@
             </p>
             <a class="hire-button" href="https://github.com/saifulhaque015/dev-port" target="_blank">Download
                 Resum</a>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="top-banner">
+                <h1>Senior Web Developer</h1>
+                <h3>2021-Present | Pro Level Developer
+                </h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't
+                    stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know
+                    the
+                    deployment,
+                    server and security. I will give you 100% web solution.
+
+                </p>
+            </div>
+            <div class="top-banner">
+                <h1>Baby Web Developer</h1>
+                <h3>2020-2021 | Programming Hero Learner
+                </h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them.
+                    They liked it. And uploaded the content. It was fun working at Programming Hero.
+
+                </p>
+            </div>
         </div>
     </section>
 </body>
