--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="top-banner">
-                <h1>Senior Web Developer</h1>
-                <h3>2021-Present | Pro Level Developer
+            <div class="exp-item">
+                <h2>Senior Web Developer</h2>
+                <h3 class="top-orange">2021-Present | Pro Level Developer
                 </h3>
                 <p>
                     I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -69,9 +69,9 @@
 
                 </p>
             </div>
-            <div class="top-banner">
-                <h1>Baby Web Developer</h1>
-                <h3>2020-2021 | Programming Hero Learner
+            <div class="exp-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="top-orange">2020-2021 | Programming Hero Learner
                 </h3>
                 <p>
                     They didn't offer me a job. But I made myself as a remove web developer. I made their website and
