--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="exp-item">
+            <div class="exp-item" id="senior">
                 <h2>Senior Web Developer</h2>
                 <h3 class="top-orange">2021-Present | Pro Level Developer
                 </h3>
@@ -69,7 +69,7 @@
 
                 </p>
             </div>
-            <div class="exp-item">
+            <div class="exp-item" id="baby">
                 <h2>Baby Web Developer</h2>
                 <h3 class="top-orange">2020-2021 | Programming Hero Learner
                 </h3>
@@ -83,6 +83,10 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p class="footer-text">© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
